<resources>
    <string name="app_name">coinz</string>
    <string name="title_activity_login">Coin hunt</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="collect">Collect</string>
    <string name="foundCoin">Would you like to collect %1$s ?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="start_chasing">Start Chasing</string>
    <string name="coinValue">%1$d/25 coins
    </string> <!-- We only want Double values for the number of coins collected -->
    <string name="bank">Bank</string>
    <string name="coinsBank">Total coins in bank this week: %1$d</string>
    <string name="coinsWeek">Total coins this week: %1d</string>
    <string name="averageWeekly">Average coins per week</string>
    <string name="title_activity_bank">BankActivity</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="title_activity_bank_tabbed">BankTabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_friend">Add a friend</string>
    <string name="send_coins_message">Total spare change you can send to friends: %1d</string>
    <string name="send_friend">Send coins</string>
    <string name="new_friend_message">You don\'t have any friends at the moment. Click below to add one now.</string>
    <string name="friend_name">Enter username</string>
    <string name="confirmation_send">Are you sure? This action is irreversible.</string>
    <string name="instructions_send">Select how many coins to send and press OK.</string>
    <string name="normal_mode">Easy</string>
    <string name="advanced_mode">Difficult</string>
    <string name="select_mode">Select a level of game</string>
</resources>
