<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Connection">

    <Button
            android:id="@+id/register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:fontFamily="@font/rubik_medium"
            android:textStyle="bold" tools:text="REGISTER"
            app:layout_constraintTop_toBottomOf="@+id/username" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="115dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:fontFamily="@font/rubik_medium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email2"/>
    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true" app:layout_constraintEnd_toEndOf="parent"
            app:fontFamily="@font/rubik_medium"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/password2"
            app:layout_constraintBottom_toTopOf="@+id/register"/>
    <AutoCompleteTextView
            android:id="@+id/email2"
            android:layout_width="384dp"
            android:layout_height="46dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:fontFamily="@font/rubik_medium"
            android:layout_marginTop="55dp" app:layout_constraintTop_toBottomOf="@+id/email_login_form"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password2"/>
    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
                android:id="@+id/username_2"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:fontFamily="@font/rubik_medium"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    app:fontFamily="@font/rubik_medium"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                app:fontFamily="@font/rubik_medium"
                android:textStyle="bold" tools:text="SIGN IN"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>