<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/select_mode"
            android:layout_width="193dp"
            android:layout_height="45dp"
            app:fontFamily="@font/rubik_medium"
            android:textSize="17sp"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="65dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/normal_mode"
            android:layout_width="148dp"
            android:layout_height="51dp"
            app:fontFamily="@font/rubik_medium"
            android:id="@+id/easyButton" android:layout_marginEnd="133dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="103dp"
            android:layout_marginTop="71dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginBottom="41dp" app:layout_constraintBottom_toTopOf="@+id/advancedButton"/>
    <Button
            android:text="@string/advanced_mode"
            android:layout_width="148dp"
            android:layout_height="49dp"
            app:fontFamily="@font/rubik_medium"
            android:id="@+id/advancedButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="102dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="134dp"
            android:layout_marginBottom="196dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/easyButton"/>
</android.support.constraint.ConstraintLayout>